Refactor code to use `var` for type inference and migrate controllers to `infra.rest` package. Update caching configurations and modernize Java practices across the project.